# codewars-rs

./: Cargo.toml
api/: Cargo.toml
api/src/: lib.rs
api_unofficial/: Cargo.toml
api_unofficial/src/: jwt.rs  lib.rs  project.rs  suggest.rs  ua.txt
api_unofficial/src/project/: proj_id_test.js  result.rs
cli/: Cargo.toml
cli/src/: command.rs  file_list.rs  kata.rs  main.rs  rank.rs  session.rs  suggest.rs  user.rs
cli/src/file_list/: config.rs
cli/src/session/: result.rs
solution/: Cargo.toml
solution/src/: index.rs  lib.rs
types/: Cargo.toml
types/src/: kata_id.rs  lang.rs  lib.rs  rank.rs
workspace/: Cargo.toml
workspace/src/: coq.rs  haskell.rs  java.rs  kotlin.rs  lib.rs  rust.rs  scala.rs  typescript.rs  util.rs
workspace/src/coq/: Makefile
workspace/src/haskell/: Test_Main.hs  cabal.project.local.in  challenge.cabal
workspace/src/kotlin/: build.gradle.kts
workspace/src/rust/: Cargo.toml  dep-1.62.toml  profile.toml
workspace/src/scala/: build.sc  scalafmt.conf
workspace/src/typescript/: package.json.in
workspace/src/util/: fs.rs
