[package]
name = "codewars_unofficial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", default-features = false, features = [
  "gzip",
  "json",
  "cookies",
  "rustls-tls",
] }
reqwest_cookie_store = "0.6.0"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.51"
codewars_types = { path = "../types" }
log = "0.4.20"
percent-encoding = "2.3.1"
