[package]
name = "codewars_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codewars_solution = { path = "../solution" }
codewars_types = { path = "../types" }
codewars_api = { path = "../api" }
codewars_unofficial = { path = "../api_unofficial" }
codewars_workspace = { path = "../workspace" }
rustyline = "13.0.0"
anyhow = "1.0.79"
chrono = "0.4.31"
tokio = { version = "1.35.1", features = ["rt", "time"] }
clap = { version = "4.4.14", features = ["derive", "env"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.111"
shlex = "1.2.0"
env_logger = "0.10.1"
yansi = "0.5.1"
eza = "0.20.4"
dircpy = "0.3.19"
dialoguer = { version = "0.11.0", default-features = false }
