[package]
name = "codewars_workspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codewars_types = { path = "../types" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
